<resources>
    <string name="app_name">江大镖局</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="menu_settings">Settings</string>

    <string name="scan_text">将二维码放入框内</string>
    <string name="fetch_package">取件扫码</string>
    <string name="deliver_package">派件扫码</string>
    <string name="back">返回</string>
    <string name="scan_QR">二维码扫描</string>
    <string name="select_job">请选择业务类型:</string>
    <string name="bottom_copyright">Copyright© 2016 |</string>
    <string name="bottom_object">江大镖局</string>
    <string name="bottom_from">由</string>
    <string name="bottom_vastsum">巨和网络</string>
    <string name="bottom_technology">提供技术支持</string>
</resources>
